applications/incident-api/local/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: incident-api
  namespace: incident-platform
  labels:
    app.kubernetes.io/name: incident-api
    app.kubernetes.io/part-of: incident-platform
    app.kubernetes.io/version: "0.3.0"
    environment: local
spec:
  replicas: 2

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app.kubernetes.io/name: incident-api
      app.kubernetes.io/instance: incident-api-local

  template:
    metadata:
      labels:
        app.kubernetes.io/name: incident-api
        app.kubernetes.io/instance: incident-api-local
        app.kubernetes.io/part-of: incident-platform
        app.kubernetes.io/version: "0.3.0"
        environment: local

    spec:
      automountServiceAccountToken: false

      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: api
          image: incident-platform-api:0.3.0
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8000
              protocol: TCP

          startupProbe:
            httpGet:
              path: /health
              port: http
            failureThreshold: 30
            periodSeconds: 2
            timeoutSeconds: 1

          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi

          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          volumeMounts:
            - name: temporary-files
              mountPath: /tmp

      volumes:
        - name: temporary-files
          emptyDir: {}
