applications/incident-api/local/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: incident-api
  namespace: incident-platform
  labels:
    app.kubernetes.io/name: incident-api
    app.kubernetes.io/part-of: incident-platform
    environment: local
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: incident-api
    app.kubernetes.io/instance: incident-api-local

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
